kubernetes/gotenberg.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: gotenberg
  name: gotenberg
  namespace: paperless-ng
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gotenberg
  template:
    metadata:
      labels:
        app: gotenberg
    spec:
      containers:
      - image: thecodingmachine/gotenberg
        name: gotenberg
        ports:
          - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: gotenberg
  namespace: paperless-ng
spec:
  selector:
    app: gotenberg
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
